Fixed wrong position for link

--- a/epidark.user.css
+++ b/epidark.user.css
@@ -1136,6 +1136,11 @@ fieldset{
     line-height:normal;
 }
 
+#homeboard p.info_articles_hidden{
+    padding: 16px 0 0 0;
+    margin-right: 8px;
+}
+
 #homeboard section{
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
     font-size: 16px;
